--- a/index.html
+++ b/index.html
@@ -1298,6 +1298,7 @@
           </div>
         </div>
         <!----------------------------end utilitiesModel---------------------------------> 
+        <div id="alertNote">Please click on 'Select a discretionary Advisory Portfolio' under the Recommendations tab to see more functionality.</div>
     </div>
   </div>
 </div>
